Created Catalog plot with plotlyjs

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -26,6 +26,10 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
         <link href='//fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
 
+        <!-- Aladin -->
+        <link rel="stylesheet" href="%PUBLIC_URL%/aladin/aladin.min.css" />
+        <script src="%PUBLIC_URL%/aladin/jquery-1.12.1.min.js"></script>
+        <script src="%PUBLIC_URL%/aladin/aladin.min.js"></script>
 
 
     </head>
