--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Aladin -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/lib/aladin.min.css" />
+    <script src="%PUBLIC_URL%/lib/jquery-1.12.1.min.js"></script>
+    <script src="%PUBLIC_URL%/lib/aladin.min.js"></script>
   <title>React App</title>
 </head>
 
