--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap" />
     <!-- <script src="%PUBLIC_URL%/lib/jquery-1.12.1.min.js"></script>
     <script src="%PUBLIC_URL%/lib/aladin.min.js"></script> -->
-    <title>TNO Portal</title>
+    <title>Solar System Portal</title>
   </head>
 
   <body>
