--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VJLXT989W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-9VJLXT989W')
+    </script>
 
     <!-- Aladin -->
     <link rel="stylesheet" href="%PUBLIC_URL%/lib/aladin.min.css" />
